<resources>
    <string name="app_name">MAD project Delta</string>
    <string name="Login_Head">Login</string>
    <string name="login_Username">Username</string>
    <string name="login_Password">Password</string>
    <string name="login_btnlogin">LOGIN</string>
    <string name="login_new_account">Create New Account</string>
    <string name="login_btn_register">Sign Up</string>
    <string name="login_registertext">Forget Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="phonenumber">Phone number</string>
    <string name="email">Email</string>
    <string name="password1">Password</string>
    <string name="password2">Comfirm password</string>
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="btn_navlogin">Already have an account? Login</string>
    <string name="shop_view">SHOP</string>
    <string name="titlecart">Cart</string>
    <string name="calculatebill">CALCULATE BILL</string>
    <string name="productView1">Product:</string>
    <string name="product_name">Dog Chew Toy</string>
    <string name="productView2">Stock:</string>
    <string name="product_qty">80</string>
    <string name="productView3">Price:</string>
    <string name="product_price">1600.00</string>
    <string name="productView4">Description</string>
    <string name="product_description">Benebone Real Bacon Durable Wishbone Dog Chew Toy for Aggressive Chewers, Made in USA</string>
    <string name="productView5">Quantity :</string>
    <string name="product_inputqty">1</string>
    <string name="btn_addtocart">ADD TO CART</string>
    <string name="cart_product">Dog Chew Toy</string>
    <string name="cart_quantity">1</string>
    <string name="cart_price">1600.00</string>
    <string name="bill_view">BILL</string>
    <string name="total_price">Total Price</string>
    <string name="bill_details">ORDER DETAILS</string>
    <string name="order_cusName">Enter your name</string>
    <string name="order_address">Enter your address</string>
    <string name="orders_phone">Enter your phone no</string>
    <string name="order_postal">Enter your postal code</string>
    <string name="confirm_order">CONFIRM AND BUY</string>
    <string name="show_ordDetails">1 Dog Chew Toy</string>
    <string name="show_ordPrice">Rs.1600.00</string>
    <string name="order_cancle">CANCEL ORDER</string>
    <string name="forgot_pw">Forget Password</string>
    <string name="sendemail_btn">Send Verification Email</string>
    <string name="backlogin_btn">Back To Login</string>
    <string name="adm_ordCusName">Nimal Perea</string>
    <string name="adm_ordAdress">No.123,Hikkaduwa,Galle</string>
    <string name="adm_ordDet">1 Dog Chew Toy</string>
    <string name="adm_ordPrice">Rs.1600.00</string>
    <string name="app_home">Home</string>
    <string name="cusProfile">CUSTOMER PROFILE</string>
    <string name="signUpUsernameTxt">Username</string>
    <string name="SignupemailTxt">Email</string>
    <string name="cus_phone">Phone Number</string>
    <string name="pro_update_btn">UPDATE</string>
    <string name="pro_logout_btn">LOG OUT</string>
    <string name="profile_view">PROFILE</string>
    <string name="admin_view">Admin</string>
    <string name="admin_menu_admiprof">Admin Profile</string>
    <string name="admin_menu_itembtn">Item Management</string>
    <string name="admin_menu_orders">Customer Orders</string>
    <string name="admin_menu_care">Care Organizations</string>
    <string name="profile_menue_ads">My Advertisements</string>
    <string name="profile_menue_editprof">Edit Profile</string>
    <string name="profile_menue_orders">My Orders</string>
    <string name="etproductname">Enter Product Name</string>
    <string name="etinputProductqty">Enter Quantity</string>
    <string name="etinputdescript">Enter Description</string>
    <string name="etinputUP">Enter unit price</string>
    <string name="admin_add_item_btntxt">Add</string>
    <string name="admin_delete_item_btntxt">Delete</string>
    <string name="admin_update_item_btntxt">Update</string>
    <string name="adminBtnAddItem">Add item</string>

    <string name="corner_viewAd_dogtype">Labrador Puppies</string>
    <string name="corner_viewAd_price">Rs. 40 000/=</string>
    <string name="corner_viewAd_description">Description:</string>
    <string name="corner_viewAd_back">Back</string>
    <string name="corner_showAds_location">Location</string>
    <string name="corner_showAd_viewButton">View</string>
    <string name="corner_showAd_description">Labrador Puppies</string>
    <string name="corner_showAd_details">Golden, 28 days, Healthy</string>
    <string name="corner_showAd_price">Rs. 40 000/=</string>
    <string name="corner_myAds_headerText">My Advertisments</string>
    <string name="corner_view_post_phone">Contact No :</string>
    <string name="corner_view_post_Number">071-2546324</string>
    <string name="corner_view_post_email">Email :</string>
    <string name="corner_view_post_mail">saman@gmail.com</string>
    <string name="corner_view_post_edit">Edit</string>
    <string name="corner_edit_post_breed">Dog Breed/Type</string>
    <string name="corner_edit_post_price">Price :</string>
    <string name="corner_edit_post_description">Description :</string>
    <string name="corner_edit_post_contact">Contact No :</string>
    <string name="corner_edit_post_email">Email :</string>
    <string name="corner_edit_post_changebut">Change Photo</string>
    <string name="corner_edit_post_savebut">Save</string>
    <string name="corner_view_post_delete">Remove</string>
    <string name="corner_edit_post_cancel">Cancel</string>
    <string name="corner_add_post_addPhoto">Add Photo</string>
    <string name="corner_add_post_postbut">Post</string>
    <string name="corner_add_post_cancelbut">Cancel</string>

    <string name="care_findclinic_headertxt">Find Nearest Clinic</string>
    <string name="care_findclinic_searchtxt">Search Location</string>
    <string name="care_findclinic_clinic_name">Sample Organization</string>
    <string name="care_findclinic_clinic_des">Description</string>
    <string name="care_findclinic_clinic_viewButton">View</string>
    <string name="care_findclinic_clinic_loc">Location</string>
    <string name="care_viewAd_desDetails">Golden white, 28 days, Healthy</string>

    <string name="care_clinicdetails_headtxt">CLINIC DETAILS</string>
    <string name="care_clinicdetails_name">Clinic Name: VCare Veterinarian Center</string>
    <string name="care_clinicdetails_contactnum">Contact Number: +94112345678</string>
    <string name="care_clinicdetails_address">Address/Location: No:123, Colombo</string>
    <string name="care_clinicdetails_city">City: Colombo</string>
    <string name="care_clinicdetails_description">Description: sometimes our pets need more than just our love.</string>
    <string name="care_clinicdetails_owner">Owner Name:Sahan Perera</string>

    <string name="admin_organization_headtxt">Organization</string>
    <string name="admin_org_contact">Contact Number: +941123456</string>
    <string name="admin_org_location">Location: No:123, Colombo, Sri Lanka</string>
    <string name="admin_org_selectbutton">Select</string>
    <string name="admin_org_headertxt">Organization Details</string>
    <string name="admin_org_name">Clinic Name</string>
    <string name="admin_orgdetails_contact">Contact Number</string>
    <string name="admin_orgdetails_location">Address/Location</string>
    <string name="admin_orgdetails_city">City</string>
    <string name="admin_orgdetails_description">Description</string>
    <string name="admin_orgdetails_owner">Owner Name</string>
    <string name="admin_org_delete">Delete</string>
    <string name="admin_org_update">Update</string>
    <string name="admin_orgadd_headertxt">Add organization Details</string>
    <string name="admin_orgadd_name">Clinic Name</string>
    <string name="admin_orgadd_number">Contact Number</string>
    <string name="admin_orgadd_address">Address/Organization</string>
    <string name="admin_orgadd_city">City</string>
    <string name="admin_orgadd_description">Description</string>
    <string name="admin_orgadd_owner">Owner Name</string>
    <string name="admin_orgadd_add">Add Clinic</string>
    <string name="admin_org_addbutton">Add New Org</string>
    <string name="care_view">Care</string>
    <string name="corner_view">Corner</string>

</resources>