<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shop_view_product">

    <!--Top menue bar begis-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@color/TopMenueBackgroud"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_logo_top"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="serif"
            android:text="@string/shop_view"
            android:textColor="@color/Theme"
            android:textSize="50sp" />

    </LinearLayout>
    <!--Top menue bar ends-->

    <!--body start-->

    <!--Bottom navigation bar begins-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp">

        <ImageView
            android:id="@+id/viewItem_iamge"
            android:layout_width="164dp"
            android:layout_height="159dp"
            android:contentDescription="@string/productView1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182"
            app:srcCompat="@drawable/dogchewtoy" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="159dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_name"
            android:textColor="#0B0B0B"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toBottomOf="@+id/productView1" />

        <TextView
            android:id="@+id/productView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="19dp"
            android:text="@string/productView3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toBottomOf="@+id/productView2" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/product_price"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/productView3"
            app:layout_constraintStart_toEndOf="@+id/productView3" />

        <TextView
            android:id="@+id/product_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/product_qty"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/productView2"
            app:layout_constraintStart_toEndOf="@+id/productView2" />

        <TextView
            android:id="@+id/productView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="76dp"
            android:text="@string/productView1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/productView2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="1dp"
            android:text="@string/product_description"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productView4" />

        <TextView
            android:id="@+id/productView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="56dp"
            android:text="@string/productView4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewItem_iamge" />


        <TextView
            android:id="@+id/productView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/productView5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_description" />

        <EditText
            android:id="@+id/product_inputqty"
            android:layout_width="114dp"
            android:layout_height="39dp"
            android:layout_marginStart="44dp"
            android:background="@color/OrderviewBtn"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="@string/product_inputqty"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/productView5"
            app:layout_constraintStart_toEndOf="@+id/productView5" />

        <Button
            android:id="@+id/btn_addtocart"
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_login_fill"
            android:text="@string/btn_addtocart"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_inputqty" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="57dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="171dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/hom" />


    <!--body end-->



</RelativeLayout>