<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shop_update_cartitem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/TopMenueBackgroud"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo_top"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="serif"
            android:text="@string/shop_view"
            android:textColor="@color/Theme"
            android:textSize="50sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp">

        <ImageView
            android:id="@+id/viewItem_iamge"
            android:layout_width="164dp"
            android:layout_height="159dp"
            android:contentDescription="@string/productView1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182"
            app:srcCompat="@drawable/dogchewtoy" />

        <TextView
            android:id="@+id/viewItem_name"
            android:layout_width="159dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_name"
            android:textColor="#0B0B0B"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="19dp"
            android:text="@string/productView3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/viewItem_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/product_price"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15" />

        <TextView
            android:id="@+id/viewItem_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/product_qty"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="76dp"
            android:text="@string/productView1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/productView2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/viewItem_iamge"
            app:layout_constraintTop_toBottomOf="@+id/viewItem_name" />

        <TextView
            android:id="@+id/viewItem_description"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="1dp"
            android:text="@string/product_description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="56dp"
            android:text="@string/productView4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewItem_iamge" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/productView5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewItem_description" />

        <EditText
            android:id="@+id/updateCart_inputqty"
            android:layout_width="114dp"
            android:layout_height="39dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:background="@color/OrderviewBtn"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:text="01"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            android:gravity="center_horizontal" />


        <Button
            android:id="@+id/button_updateCartQty"
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/design_default_color_secondary_variant"
            android:text="Update Quantity"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateCart_inputqty" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>